solved day3 part 2; fixed running of tests via maven